Fix mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ add_subdirectory(shared/scenelib)
 add_subdirectory(shared/sfmlutils)
 add_subdirectory(shared/sfmltemplate)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}src)
 FILE(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 FILE(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
 
